<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="country_req">Select Country</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="item_date_req">Today</string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="item_detail_fragment_title2">Item - %1$s</string>
    <string name="add_fragment_title">Add Stock</string>
    <string name="add_category_title">Add New Category</string>
    <string name="add_exp_category">New Expenses Category</string>
    <string name="add_subcategory_title">Add New Subcategory</string>
    <string name="adjust_category">Category Settings</string>
    <string name="modify_subcategory">Modify Subcategory</string>
    <string name="edit_fragment_title">Edit Stock</string>
    <string name="price">Price</string>
    <string name="last_purchase">Purchased</string>
    <string name="stock_changes">Changes</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="date_created">Date Created:</string>
    <string name="date_picker">Date picker</string>
    <string name="set_start_date">Set start date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string-array name="countries">
        <item>United State</item>
        <item>China</item>
        <item>Malaysia</item>
        <item>Taiwan</item>
        <item>Singapore</item>
    </string-array>

    <!-- OnBoarding Screen -->
    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  Menu Fragment  -->
    <string name="statistic">Statistic</string>
    <string name="profile">Profile</string>
    <!-- Calendar View -->
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <!--  Expense Items  -->
    <string name="item1">Foods</string>
    <string name="item2">Movie</string>
    <string name="item3">Medical</string>
    <string name="item4">Sport</string>
    <string name="item5">Beauty</string>
    <string name="item6">Transport</string>
    <string name="item7">Travel</string>
    <string name="item8">Nutrition</string>
    <string name="item9">Skincare</string>
    <string name="item10">Pet</string>
    <string name="item11">Donation</string>
    <string name="item12">Utilities</string>
    <string name="addCategory">Add Category</string>
    <string name="adjustCategory">Adjust</string>
</resources>