<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
        tools:context=".views.ItemListFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/label_quantity"
        app:layout_constraintEnd_toStartOf="@+id/label_price"/>
<!--    <TextView-->
<!--        android:id="@+id/item_name"-->
<!--        style="@style/Widget.Inventory.Header"-->
<!--        android:layout_marginStart="@dimen/margin_between_elements"-->
<!--        android:text="@string/item"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/item_price"-->
<!--        app:layout_constraintHorizontal_weight="2"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/label_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/label_quantity"
        app:layout_constraintStart_toEndOf="@id/label_name"/>
<!--    <TextView-->
<!--        android:id="@+id/item_price"-->
<!--        style="@style/Widget.Inventory.Header"-->
<!--        android:layout_below="@+id/item_name"-->
<!--        android:layout_marginStart="@dimen/margin_between_elements"-->
<!--        android:text="@string/price"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/item_quantity"-->
<!--        app:layout_constraintHorizontal_weight="1"-->
<!--        app:layout_constraintStart_toEndOf="@+id/item_name"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity_in_stock"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_price"
        app:layout_constraintEnd_toEndOf="parent"/>
<!--    <TextView-->
<!--        android:id="@+id/item_quantity"-->
<!--        style="@style/Widget.Inventory.Header"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginEnd="@dimen/margin_between_elements"-->
<!--        android:text="@string/quantity_in_stock"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_weight="1"-->
<!--        app:layout_constraintStart_toEndOf="@+id/item_price"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/parent_recycle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_quantity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parent_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:scrollbars="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/divider" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/add_new_item"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>